--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,6 +1,133 @@
-$myRed: red;
+@import "variables.scss";
+
+* {
+    box-sizing: border-box;
+    margin:0;
+    padding:0;
+}
 
 body {
-    background-color: $myRed;
+    margin:0;
     font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+nav {
+    height:$navHeight;
+    width:100%;
+    position:fixed;
+    top:0;
+    left:0;
+    right:0;
+    background-color:white;
+    display:flex;
+    justify-content: space-between;
+    align-items: center;
+
+    img {
+        height:$navHeight;
+        padding: $cs 0 $cs $cs;
+    }
+    .dropdown {
+        padding:$cs $cs $cs 0;
+        font-size: 1.5em;
+        transition:0.3s ease-in-out;
+    }
+    .menu {
+        position: fixed;
+        top:$navHeight + $cs-xs;
+        text-align: right;
+        right:$cs;
+        display:none;
+        -webkit-transition:0.3s ease-in-out;
+
+        ul {
+            display:flex;
+            justify-content: flex-start;
+            align-items:center;
+            height:$navHeight;
+
+        li {
+            list-style: none;
+            padding:0 $cs-xs 0 $cs-xs;
+            height:$navHeight;
+            border-bottom: 2px solid rgba(59, 59, 145, 0);
+            border-left:1px solid rgba(128, 128, 128, 0.808);
+            display:flex;
+            align-items: center;
+
+            &:hover {
+                border-bottom: 2px solid $navColor;
+                cursor: pointer;
+
+            }
+        }
+    }
+    }
+    .not_hidden {
+        display:block;
+        transition: 0.3s ease-in-out;
+    }
+}
+.main-header {
+    margin:$navHeight 0 0 0;
+    width:100vw;
+    height:$navHeight;
+    background-color: $navColor;
+
+    header {
+        padding: 0 0 0 $cs;
+        font-size:2em;
+        color:white;
+    }
+}
+main {
+    width:100%;
+    padding:$cs;
+    display:flex;
+    flex-direction:column;
+
+    #container {
+        display:grid;
+        grid-template-columns: 1fr;
+        grid-column-gap: $cs-lg;
+
+    article {
+        background-color:pink;
+        margin-bottom: $cs-lg;
+
+            header {
+                font-weight: 600;
+                padding:$cs-xs;
+            }
+
+            img {
+                width:100%;
+                }
+
+                .description {
+                    padding:$cs;
+                    font-size:0.8em;
+                }
+            }
+
+        }
+
+        }
+
+@media only screen and (min-width: 850px) {
+    nav {
+        .menu {
+            position:unset;
+            text-align: left;
+            padding: 0 0 0 $cs;
+            width:90%;
+
+            li {
+                display:inline-block;
+                padding: 0 $cs-xs 0 $cs-xs;
+            }
+        }
+    }
+    #container {
+        grid-template-columns: 1fr 1fr;
+    }
 }
